updated index and css template

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <link rel="stylesheet" href="main.css"/>
   </head>
   <body>
+    <div class='nav'>
+      <ui>Home</ui>
+    <div>
+    <div class='main'>
+
+      <div class='price'>
+        <div id='usdt-btc'><div>
+          <p>Bitcoin</p> <p>$0000.00</p>
+
+        <div id='usdt-eth'><div>
+          <p>Etherium</p>
+          <p>$0000.00</p>
+        <div id='usdt-ltc'><div>
+          <p>Litecoin</p>
+          <p>$0000.00</p>
+      <div>
+    </div>
     <script type="text/JavaScript" src="app.js"></script>
   </body>
 </html>
