--- a/index.html
+++ b/index.html
@@ -7,21 +7,15 @@
   </head>
   <body>
     <div class='nav'>
-      <ui>Home</ui>
-    <div>
-    <div class='main'>
+      <div class="logo">
 
-      <div class='price'>
-        <div id='usdt-btc'><div>
-          <p>Bitcoin</p> <p>$0000.00</p>
+      </div>
+    </div>
+    <div class="body">
 
-        <div id='usdt-eth'><div>
-          <p>Etherium</p>
-          <p>$0000.00</p>
-        <div id='usdt-ltc'><div>
-          <p>Litecoin</p>
-          <p>$0000.00</p>
-      <div>
+    </div>
+    <div class="footer">
+
     </div>
     <script type="text/JavaScript" src="app.js"></script>
   </body>
