--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class='nav'>
       <ui>Home</ui>
-    <div>
+    </div>
     <div class='main'>
       <div>
         <ul class='coin'>Bitcoin
@@ -28,8 +28,10 @@
         </ul>
       </div>
     </div>
+
     <script type="text/JavaScript" src="app.js"></script>
   </body>
+    <footer>test</footer>
 </html>
 
 <!--
