Fixed the top nav

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="logo">
         <img src="assets/img/btcoin-logo-500x500.png" alt="Logo">
       </div>
-      <ul>
+      <div class="topNav">
         <script type="text/JavaScript" src="assets/js/headder.js"></script>
-      </ul>
+      </div>
     </div>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="fa fa-window-close" onclick="closeNav()"></a>
