--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Bittrex Bot</title>
     <link rel="stylesheet" href="assets/css/main.css"/>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+    <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
+    <script src="assets/js/jquery-3.2.1.min.js"></script>
   </head>
   <body>
     <div class='nav'>
