--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Bittrex Bot</title>
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
     <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
+    <script type="text/JavaScript" src="./assets/js/main.js"></script>
   </head>
   <body>
     <div class='nav'>
@@ -26,12 +28,13 @@
     <div class="body">
       <!-- Use any element to open the sidenav -->
       <span onclick="openNav()"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
-      <p>Select FIle to Output:</p>
-      <input type="file" id="csv">
-      <div id="output"></div>
+      <div>
+        <p>Select FIle to Output:</p>
+        <input type="file" id="csv">
+        <div id="output"></div>
+      </div>
     </div>
-    </script>
-    <script type="text/JavaScript" src="./assets/js/app.js"></script>
+    <script type="text/JavaScript" src="./assets/js/csvPars.js"></script>
   </body>
 
 </html>
