--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/main.css"/>
     <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
+
     <script type="text/JavaScript" src="./assets/js/main.js"></script>
   </head>
   <body>
@@ -20,10 +21,7 @@
     </div>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="fa fa-window-close" onclick="closeNav()"></a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
+      <script type="text/JavaScript" src="./assets/js/sidenav.js"></script>
     </div>
     <div class="body">
       <!-- Use any element to open the sidenav -->
