finished table creator

--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,15 @@
       <!-- Use any element to open the sidenav -->
       <span onclick="openNav()"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
       <div>
-        <p>Select FIle to Output:</p>
+        <p>Select File to Output:</p>
         <input type="file" id="csv">
         <div id="output"></div>
       </div>
+      <div>
+      <table id="tradeData">
+
+      </table>
+    </div>
     </div>
     <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
