Created analytics page and created link in side nav.

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Bittrex Tools Home</title>
+    <title>Bittrex Tools Analytics</title>
     <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
   </head>
@@ -22,16 +22,18 @@
     <div class="body">
       <!-- Use any element to open the sidenav -->
       <span onclick="openNav()"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
-      <!-- <div>
+      <div>
         <p>Select File to Output:</p>
         <input type="file" id="csv">
         <div id="output"></div>
       </div>
       <div>
       <table id="tradeData">
+        <tr class="market-data">
+        </tr>
 
       </table>
-    </div> -->
+    </div>
     </div>
     <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
