made some changes to table creation.

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -23,6 +23,10 @@
       <!-- Use any element to open the sidenav -->
       <span onclick="openNav()"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
       <div>
+        <h1>Bittrex Trade Data Alalyser</h1>
+        <p>At bittrex.com go to your orders page and at the bottom download the full market data.  Then use select file to import your data.</p>
+      </div>
+      <div>
         <p>Select File to Output:</p>
         <input type="file" id="csv">
         <div id="output"></div>
