--- a/public/analytics.html
+++ b/public/analytics.html
@@ -41,6 +41,7 @@
     </div>
     <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/JavaScript" src="./assets/js/main.js"></script>
     <script type="text/JavaScript" src="./assets/js/csvPars.js"></script>
   </body>
