started appending data to the home page.

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -12,12 +12,12 @@
         <img src="assets/img/btcoin-logo-500x500.png" alt="Logo">
       </div>
       <div class="topNav">
-        <script type="text/JavaScript" src="assets/js/headder.js"></script>
+        <script type="text/JavaScript" src="assets/js/view/headder.js"></script>
       </div>
     </div>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="fa fa-window-close" onclick="closeNav()"></a>
-      <script type="text/JavaScript" src="./assets/js/sidenav.js"></script>
+      <script type="text/JavaScript" src="./assets/js/view/sidenav.js"></script>
     </div>
     <div class="body">
       <!-- Use any element to open the sidenav -->
@@ -40,10 +40,10 @@
     </div>
     </div>
     <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
+    <script src="assets/js/library/jquery-3.2.1.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="text/JavaScript" src="./assets/js/main.js"></script>
-    <script type="text/JavaScript" src="./assets/js/csvPars.js"></script>
+    <script type="text/JavaScript" src="./assets/js/controller/main.js"></script>
+    <script type="text/JavaScript" src="./assets/js/controller/csvPars.js"></script>
   </body>
 
 </html>
