--- a/public/index.html
+++ b/public/index.html
@@ -12,31 +12,30 @@
         <img src="assets/img/btcoin-logo-500x500.png" alt="Logo">
       </div>
       <div class="topNav">
-        <script type="text/JavaScript" src="assets/js/headder.js"></script>
+        <script type="text/JavaScript" src="assets/js/view/headder.js"></script>
       </div>
     </div>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="fa fa-window-close" onclick="closeNav()"></a>
-      <script type="text/JavaScript" src="./assets/js/sidenav.js"></script>
+      <script type="text/JavaScript" src="./assets/js/view/sidenav.js"></script>
     </div>
     <div class="body">
       <!-- Use any element to open the sidenav -->
       <span onclick="openNav()"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
-      <!-- <div>
-        <p>Select File to Output:</p>
-        <input type="file" id="csv">
-        <div id="output"></div>
-      </div>
-      <div>
-      <table id="tradeData">
+      <section>
+        <ul id="markets">
 
-      </table>
-    </div> -->
+        </ul>
+
+      </section>
     </div>
     <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script type="text/JavaScript" src="./assets/js/main.js"></script>
-    <script type="text/JavaScript" src="./assets/js/csvPars.js"></script>
+    <script src="assets/js/library/jquery-3.2.1.min.js"></script>
+    <script type="text/JavaScript" src="./assets/js/controller/main.js"></script>
+    <script src="assets/js/model/bittrex.js"></script>
+    <script src="assets/js/view/home-page.js"></script>
+
+    <script>app.Bittrex.getMarkets();</script>
   </body>
 
 </html>
