--- a/public/analytics.html
+++ b/public/analytics.html
@@ -32,6 +32,11 @@
         <div id="output"></div>
       </div>
       <div>
+        <div class="buttons">
+          <button type="button" name="button" class="eth-markets">ETH Markets</button>
+          <button type="button" name="button" class="btc-markets">BTC Markets</button>
+          <button type="button" name="button" class="usdt-markets">USDT Markets</button>
+        </div>
       <table id="tradeData">
         <tr class="market-data">
         </tr>
