added buttons to filter out everything a user will not want. will later convert to selecting the elements from the table to filter out.

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -32,10 +32,8 @@
         <div id="output"></div>
       </div>
       <div>
-        <div class="buttons">
-          <button type="button" name="button" class="eth-markets">ETH Markets</button>
-          <button type="button" name="button" class="btc-markets">BTC Markets</button>
-          <button type="button" name="button" class="usdt-markets">USDT Markets</button>
+        <div id="button">
+
         </div>
       <table id="tradeData">
         <tr class="market-data">
